# learning-deploy

./: .env  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
basic_django/: settings.py  urls.py
